--- a/Lisa-Chapter3/Tasks/t_refreshing_a_workspace.dita
+++ b/Lisa-Chapter3/Tasks/t_refreshing_a_workspace.dita
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="t_refreshing_a_workspace">
-    <title>Refreshing a workspace</title>
+    <title>Procedure</title>
     <shortdesc></shortdesc>
+    <prolog>
+        <author>Lisa Adams</author>
+        <metadata>
+            <keywords>
+                <indexterm>workspace</indexterm>
+            </keywords>
+        </metadata>
+    </prolog>
     <taskbody>
-        <context>
-            <p>You can refresh the data that is displayed in the workspace on demand or at a set
-                interval.</p>
-            <p><b>About this task</b></p>
-            <p>The Tivoli Enterprise Portal client receives monitoring data from monitoring agents
-                whenever you open a workspace that includes query-based views. The default setting
-                for most predefined workspaces is On Demand, which means retrieved data remains
-                static until you refresh manually.</p>
-            <p><b>Procedure</b><ul id="ul_m2d_nsq_vxb">
-                    <li>To refresh a workspace manually, click <image href="../Images/36.jpg"
-                            id="image_nrm_5sq_vxb"/> Refresh Now.</li>
-                </ul><ul id="ul_xlr_ysq_vxb">
-                    <li>To set a refresh interval, click View > Refresh Every, and select one of the
-                        intervals: <image href="../Images/37.jpg" id="image_tzp_2tq_vxb"/>  30
-                        seconds; <image href="../Images/18.jpg" id="image_qpj_gtq_vxb"/> 60 seconds;
-                            <image href="../Images/19.jpg" id="image_z35_htq_vxb"/> 5   minutes;
-                            <image href="../Images/20.jpg" id="image_ql5_3tq_vxb"/> 15  minutes;
-                            <image href="../Images/21.jpg" id="image_gx4_rtq_vxb"/> 60 minutes; or
-                        On Demand.</li>
-                </ul></p>
-            <p><b>What to do next</b></p>
-            <p><b>Note: </b>In order for your refresh settings to persist, you must save the
-                workspace and optionally select "Assign as default for this Navigator item" in the
-                    <b>Save Workspace As</b> dialog.</p>
+        <steps id="steps_fyd_2yf_wxb">
+            <step>
+                <cmd>To refresh a workspace manually, click <image href="../Images/36.jpg"
+                        id="image_nrm_5sq_vxb"/>
+                    <uicontrol>Refresh Now</uicontrol>.</cmd>
+            </step>
+            <step>
+                <cmd>To set a refresh interval, click <menucascade>
+                        <uicontrol>View</uicontrol>
+                        <uicontrol>Refresh Every</uicontrol>
+                    </menucascade>, and select one of the intervals: <image href="../Images/37.jpg"
+                        id="image_tzp_2tq_vxb"/>
+                    <uicontrol>30 seconds</uicontrol>; <image href="../Images/18.jpg"
+                        id="image_qpj_gtq_vxb"/>
+                    <uicontrol>60 seconds</uicontrol>; <image href="../Images/19.jpg"
+                        id="image_z35_htq_vxb"/><uicontrol>5 minutes</uicontrol> ; <image
+                        href="../Images/20.jpg" id="image_ql5_3tq_vxb"/>
+                    <uicontrol>15 minutes</uicontrol>; <image href="../Images/21.jpg"
+                        id="image_gx4_rtq_vxb"/><uicontrol>60 minutes</uicontrol> ; or <uicontrol>On
+                        Demand</uicontrol>.</cmd>
+            </step>
+        </steps>
+        <postreq id="postreq_tpf_zyf_wxb">
+            <p>
+                <note id="note_kvg_bzf_wxb">In order for your refresh settings to persist, you must
+                    save the workspace and optionally select "Assign as default for this Navigator
+                    item" in the <b>Save Workspace As </b>dialog.</note>
+            </p>
             <p>If the workspace includes any plot charts or area charts, you can refresh those views
                 independent of the rest of the workspace by editing the Style properties of the
                 plotted area to specify a refresh rate.</p>
@@ -36,11 +48,9 @@
                 hub monitoring server before reaching the monitoring agent. They might also pass
                 through a remote monitoring server to reach the monitoring agent. The information is
                 returned by the same route.</p>
-            <p><b>Related tasks:</b></p>
-            <p>“Suspending and stopping refresh”</p>
-            <p>If the workspace is set to refresh automatically at timed intervals or it includes
-                event status views, you can suspend refreshes to keep the data from changing while
-                you investigate a problem.</p>
-        </context>
+            <!--Related tasks:
+“Suspending and stopping refresh”
+If the workspace is set to refresh automatically at timed intervals or it includes event status views, you can suspend refreshes to keep the data from changing while you investigate a problem.-->
+        </postreq>
     </taskbody>
 </task>
