--- a/Lisa-Chapter3/Tasks/t_opening_a_workspace.dita
+++ b/Lisa-Chapter3/Tasks/t_opening_a_workspace.dita
@@ -23,7 +23,7 @@
                     Navigator:</cmd>
                 <substeps id="substeps_fp4_kn2_wxb">
                     <substep>
-                        <cmd>Physical view: <image href="../Images/42.jpg" id="image_pdt_ln2_wxb"
+                        <cmd>Physical view: <image href="../Images/42.jpg" id="image_vqm_mzj_wxb"
                             /></cmd>
                     </substep>
                     <substep>
