--- a/Lisa-Chapter3/Tasks/t_refreshing_a_workspace.dita
+++ b/Lisa-Chapter3/Tasks/t_refreshing_a_workspace.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="t_refreshing_a_workspace">
-    <title>Procedure</title>
+    <title>Refresh Workspace Manually</title>
     <shortdesc></shortdesc>
     <prolog>
         <author>Lisa Adams</author>
@@ -12,26 +12,14 @@
         </metadata>
     </prolog>
     <taskbody>
+        <context id="context_g4f_swj_wxb">To refresh a workspace manually</context>
         <steps id="steps_fyd_2yf_wxb">
             <step>
-                <cmd>To refresh a workspace manually, click <image href="../Images/36.jpg"
-                        id="image_nrm_5sq_vxb"/>
+                <cmd>Click <image href="../Images/36.jpg" id="image_nrm_5sq_vxb"/>
                     <uicontrol>Refresh Now</uicontrol>.</cmd>
             </step>
-            <step>
-                <cmd>To set a refresh interval, click <menucascade>
-                        <uicontrol>View</uicontrol>
-                        <uicontrol>Refresh Every</uicontrol>
-                    </menucascade>, and select one of the intervals: <image href="../Images/37.jpg"
-                        id="image_tzp_2tq_vxb"/>
-                    <uicontrol>30 seconds</uicontrol>; <image href="../Images/18.jpg"
-                        id="image_qpj_gtq_vxb"/>
-                    <uicontrol>60 seconds</uicontrol>; <image href="../Images/19.jpg"
-                        id="image_z35_htq_vxb"/><uicontrol>5 minutes</uicontrol> ; <image
-                        href="../Images/20.jpg" id="image_ql5_3tq_vxb"/>
-                    <uicontrol>15 minutes</uicontrol>; <image href="../Images/21.jpg"
-                        id="image_gx4_rtq_vxb"/><uicontrol>60 minutes</uicontrol> ; or <uicontrol>On
-                        Demand</uicontrol>.</cmd>
+            <step conref="t_set_refresh_interval.dita#t_set_refresh_interval/step_in5_gyj_wxb">
+                <cmd/>
             </step>
         </steps>
         <postreq id="postreq_tpf_zyf_wxb">
