--- a/Abrar-Chapter2/Concepts/C_types_of_navigator_views.dita
+++ b/Abrar-Chapter2/Concepts/C_types_of_navigator_views.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="C_types_of_navigator_views">
-    <title>Types of Navigator views</title>
+    <title>Navigator Physical view</title>
     <prolog>
         <author>Abrar Ahmed Syed</author>
         <metadata>
@@ -13,7 +13,7 @@
         </metadata>
     </prolog>
     <concept id="concept_fvy_4t1_vxb">
-        <title>Navigator Physical view</title>
+        <title/>
         <conbody>
             <p>The default Navigator view is Physical and shows the hierarchy of your monitored
                 enterprise. The Navigator Physical view is a discovered view: as new managed systems
@@ -167,40 +167,6 @@
             <p>You can collapse the tree by double-clicking the <image
                     href="../Images/I_enterprise_bullet_type.png" id="image_unj_4z1_vxb"/>Enterprise
                 item, and expand it by double-clicking again.</p>
-        </conbody>
-    </concept>
-    <concept id="concept_wpc_nz1_vxb">
-        <title>Custom Navigator views</title>
-        <conbody>
-            <p>Your Marvel Enterprise Portal configuration can also have custom-designed Navigator
-                views. These views are selectable from the Navigator toolbar, navigable and show
-                event indicators (described below) in the same way as the Navigator Physical view.
-                Unlike the Navigator Physical view, custom Navigator views can be edited. You can,
-                for example, design a Navigator view for Manufacturing and another for
-                Marketing.</p>
-            <p>Your user ID can be assigned to all or a subset of the defined Navigator views, and
-                your access in any of these views can be restricted to a certain branch. To see the
-                list of available Navigator views, click the <image href="../Images/I_list_box.png"
-                    id="image_rjn_g1b_vxb"/> list box in the Navigator toolbar. </p>
-            <p>A small white cross over a Navigator item icon means one or more other Navigator
-                items share the characteristics of that item. This happens when an item from one
-                Navigator view has been copied to another Navigator view. All the managed systems,
-                workspaces, link definitions, situations, and policies associated with the original
-                (source) item are applied to the new item. And from then on, changes to one item
-                (such as a new workspace is added) are applied to the other. Right-click a Navigator
-                item and click <image href="../Images/I_show_navigator_list.png"
-                    id="image_zgx_h1b_vxb"/><b> Show Navigator List</b> to see the other Navigator
-                views it is contained in.</p>
-        </conbody>
-    </concept>
-    <concept id="concept_zyg_j1b_vxb">
-        <title>Navigator Logical view</title>
-        <conbody>
-            <p>Users initially have one custom Navigator view called Logical with a single Navigator
-                item for  <image href="../Images/I_platform_bullet_type.png" id="image_k43_n1b_vxb"
-                />Enterprise. Click the <image href="../Images/I_list_box.png"
-                    id="image_ecd_41b_vxb"/> list box and select the Navigator Logical view from the
-                list.</p>
         </conbody>
     </concept>
 </concept>
